<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Postmark</string>
    <string name="title_letter_detail">Letter Detail</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="toss">Toss</string>
    <string name="todo">Todo</string>
    <string name="add_to">Add</string>
    <string name="request">Request</string>
    <string name="select_stack">Select destination stack</string>
    <string name="inbox">Inbox</string>
    <string name="folders">Folders</string>
    <string name="log_out">Log out</string>
    <string name="please_enter_your_pin">Please enter your PIN to log in.</string>
    <string name="please_set_your_pin">Please set your PIN.</string>
    <string name="please_confirm_your_pin">Please confirm your PIN.</string>
    <string name="delete">Del</string>
    <string name="invalid_login_credentials">Invalid Login Credentials</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="empty_sub_text">Try adding a letter.</string>
    <string name="about">About</string>
    <string name="try_without_login">Try without login</string>
    <string name="login">Login</string>
    <string name="generic_error">An error occurred while performing this operation.</string>
    <string name="refresh">Refresh</string>
    <string name="network_issue">Cannot access Outbox. Are you connected?</string>
    <string name="network_issue_brief">Cannot access Outbox.</string>
    <string name="page">Page</string>
    <string name="empty"/>

    <string name="android_support_header">Android Support V4</string>
    <string name="gson_header">Gson</string>
    <string name="retrofit_header">Retrofit</string>
    <string name="butterknife_header">Butterknife</string>
    <string name="picasso_header">Picasso</string>
    <string name="guava_header">Guava</string>
    <string name="photoview_header">PhotoView</string>
    <string name="joda_time">Joda Time</string>

    <string name="android_support_copyright">Copyright © 2011 The Android Open Source Project</string>
    <string name="gson_copyright">Copyright © 2008–2009 Google Inc.</string>
    <string name="retrofit_copyright">Copyright 2013 Square, Inc.</string>
    <string name="butterknife_copyright">Copyright 2013 Jake Wharton</string>
    <string name="picasso_copyright">Copyright 2013 Square, Inc.</string>
    <string name="guava_copyright">Copyright © 2009 The Guava Authors</string>
    <string name="photoview_copyright">Copyright 2011, 2012 Chris Banes</string>

    <string name="apache_license">
        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n
            \thttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.\n
    </string>
    <string name="too_many_incorrect_attempts">Too many incorrect pin attempts.</string>
    <string name="Requested">Requested</string>
    <string name="Tossed">Tossed</string>
    <string name="share">Share</string>
    <string name="share_letter_to">Share Letter to…</string>
    <string name="downloading">Downloading…</string>

</resources>
