<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/NavDrawerItem"
            android:id="@+id/inbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inbox" />

        <TextView
            style="@style/NavDrawerItem"
            android:id="@+id/todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo" />

        <TextView
            style="@style/NavDrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/folders"/>

        <LinearLayout
            style="@style/NavDrawerItem"
            android:id="@+id/folders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"/>

        <TextView
            style="@style/NavDrawerItem"
            android:id="@+id/requested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Requested"/>
    </LinearLayout>
</ScrollView>