<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/logoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_image"
                    android:layout_marginBottom="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="26sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="40dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/credentialsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/logoLayout"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone">

                <EditText
                    style="@style/LoginEditText"
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="Username" />

                <EditText
                    style="@style/LoginEditText"
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionGo"
                    android:singleLine="true"
                    android:hint="Password" />

                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember Me" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Login"
                    android:textColor="@color/blue"
                    android:background="@drawable/button_white"
                    android:onClick="login" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginTypeLayout"
                android:layout_below="@id/logoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <Button
                    style="@style/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginBottom="20dp"
                    android:onClick="onShowCredentials"/>

                <Button
                    style="@style/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/try_without_login"
                    android:onClick="onDemoLogin" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logoLayout"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>